# idphoto

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES  cliff.toml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-python-wheels.yml  ci.yml  docs.yml  publish-release.yml  release.yml
bindings/jni/: Cargo.toml  build.rs
bindings/jni/kotlin/: IdPhoto.kt  JavaIdPhoto.kt
bindings/jni/src/: lib.rs
bindings/jni/tests/: smoke_test.rs
bindings/python/: Cargo.toml
bindings/python/examples/: arcface_qr_eval.py  eval_utils.py  lfw_model_compare.py  sweep_lfw.py  visualize_pairs.py
bindings/python/idphoto/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_compress.py  test_eval_helpers.py  test_eval_metrics.py
bindings/wasm/: Cargo.toml  idphoto.d.ts  index.js  package.json
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: web.rs
core/idphoto/: Cargo.toml
core/idphoto/examples/: debug_face_detection.rs  generate_samples.rs  make_offcenter.rs
core/idphoto/src/: align.rs  compress.rs  crop.rs  error.rs  face_detector.rs  lib.rs  rustface_backend.rs  webp_strip.rs  yunet_backend.rs
core/idphoto/tests/: integration_tests.rs
docs/: contributing.md  getting-started.md  index.md  model-assets.md  requirements.txt  testing.md
docs/assets/css/: extra.css
docs/assets/js/: mermaid-init.js
docs/core/: cropping.md  face-detection.md  pipeline.md  presets.md
docs/sdk/: index.md  java.md  jni.md  kotlin.md  python.md  rust.md  wasm.md
model/: README.md
plans/: rust-lib-improvements.md
scripts/: bump-version.sh
tests/fixtures/: README.md
