[workspace]
resolver = "2"
members = [
    "core/idphoto",
    "bindings/wasm",
    "bindings/python",
    "bindings/jni",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/openspp/idphoto"
homepage = "https://github.com/openspp/idphoto"
authors = ["OpenSPP contributors"]
keywords = ["image", "photo", "compression", "face-detection", "identity"]
categories = ["multimedia::images", "encoding"]
