[package]
name = "idphoto-jni"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kotlin/Java bindings for idphoto identity photo processing"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
idphoto = { path = "../../core/idphoto" }
thiserror = "2"
uniffi = { version = "0.29" }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
