[package]
name = "idphoto-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for idphoto identity photo processing"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
rustface = ["idphoto/rustface"]

[dependencies]
idphoto = { path = "../../core/idphoto" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
wasm-bindgen-test = "0.3"
